refactor: isolate token encryption module